# ihower-llm-workshop

./: .env.example  .gitignore  Dockerfile  README.md  code_agent_demo.py  custom_sqlite_session.py  deep-search-agent.py  demo_code_interpreter.py  eval-openai.py  eval_braintrust_1_dataset.py  eval_braintrust_2_category.py  eval_braintrust_2_recommend.py  eval_langsmith_1_dataset.py  eval_langsmith_2_category.py  eval_langsmith_2_recommend.py  eval_langsmith_2_recommend_openevals.py  iterrag.py  main.py  mcp-client-example1.py  mcp-client-example2.py  mcp-list-tools.py  mshumer.py  mutli-agent-research.py  my_app.py  my_mcp_server.py  oa-agent-basic.py  oa-agent-streaming.py  promptfooconfig.yaml  pyproject.toml  python_code_interpreter_tool.py  utils.py
copilotkit-frontend/: next.config.ts  package-lock.json  package.json
copilotkit-frontend/app/: layout.tsx  page.tsx  providers.tsx
copilotkit-frontend/app/api/copilotkit/: route.ts
sample_files/: TSM_earnings_calls.csv
static/: agent.html  agent_v2.html  completion.html  index.html  prompts.md  simple_agent.html  simple_agent_stream.html  structured_output.html
