[project]
name = "workshop-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "autoevals>=0.0.127",
    "braintrust>=0.0.201",
    "fastapi>=0.115.12",
    "langsmith>=0.3.28",
    "openai-agents>=0.3.0",
    "openai>=1.72.0",
    "openevals>=0.0.18",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.5.4",
    "uvicorn>=0.34.2",
    "mcp[cli]>=1.7.1",
    "smolagents[toolkit]>=1.15.0",
    "litellm>=1.68.1",
    "tiktoken>=0.12.0",
]
